initAtuh, Register ve Logout işlemleri
initAuth ile kullanıcı giriş yaptıysa localStorage üzerinden kontrolü sağlanarak state üzerine veri aktarıldı. Logout passport revoke ile token geçersiz hale getirildi ve çıkış yaptırıldı.
