# routes/api.php
@@ -18,8 +18,9 @@ use Illuminate\Support\Facades\Route;
 Route::prefix('auth')->group(function () {
     Route::post('register', [AuthController::class, 'register']);
     Route::post('login', [AuthController::class, 'login']);
-    Route::post('logout', [AuthController::class, 'logout']);
+    Route::middleware('auth:api')->get('logout', [AuthController::class, 'logout']);
 });
+
 
 Route::middleware('auth:api')->group(function () {
     Route::get('userDetail', [AuthController::class, 'user']);
